resources/css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 22px;
  color: seashell;
  background-color: black;
  text-align: center;
  opacity: 0.9;
}

#navbar {
  display: flex;
  min-height: 69px;
  border-bottom: 1px solid seashell;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  top: 0;
  width: 100%;
  background-color: black;
}

#navbar img {
  height: 50px;
  margin-left: 10px;
}

#navbar ul {
  display: flex;
  justify-content: center;
  align-items: center;
  list-style: none;
  margin-right: 10px;
}

#navbar ul li {
  margin: 0 10px;
}

#navbar ul li a {
  text-decoration: underline;
  color: seashell;
}

.banner {
  display: flex;
  margin: 69px auto 0px;
  height: 700px;
  max-width: 1200px;
  background-image: url('../images/img-mission-background.jpg');
  background-position: center;
  background-size: cover;
  justify-content: center;
  align-items: center;
}

.banner-content {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: black;
  min-width: 100%;
}

.banner-content h2 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.banner-content h4 {
  margin-bottom: 5px;
}

#featured-tea {
  max-width: 1000px;
  margin: 80px auto;
}

#featured-tea h4 {
  margin-top: 15px;
}

#tea-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 10px auto;
}

.single-item {
	margin: 10px 15px;
}

.single-item img {
  height: 200px;
  width: 300px;
}

#featured-tea .single-item h4 {
  margin-top: 10px;
}

#locations {
  max-width: 1200px;
  min-height: 500px;
  background-image: url('../images/img-locations-background.webp');
  background-position: center 25%;
  background-repeat: no-repeat;
  background-size: cover;
  margin: auto;
  height: auto;
}

#locations h2 {
  padding-top: 60px;
}

#locations-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

#locations-container .location-item {
  width: 300px;
  margin: 15px 20px;
  background-color: black;
  opacity: 1;
}

#locations-container .location-item h3 {
  margin-top: 20px;
}

#locations-container .location-item p {
  margin-top: 20px;
  margin-bottom: 20px;
}

#contacts {
  height: 200px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

#footer {
  text-align: left;
  margin-left: 20px;
}

.lorem-ipsum-content {
  margin-top: 200px;
}

